contact 100vh + opschonen

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
             font-family: ff-good-web-pro-wide, proxima-nova, sans-serif;
             font-weight: 300;
             font-style: normal;
-
         }
 
         section {
@@ -466,16 +465,13 @@
             margin-top: -8vh;
             margin-left: 21vw;
             padding: 1vh 0vw;
-
             font-size: 1vw;
             background-color: black;
             color: white;
             transition: 0.5s;
-
             max-width: 0vw;
             max-height: 6vw;
             overflow: hidden;
-
             font-style: normal;
         }
 
@@ -544,78 +540,46 @@
         #lione {
             background-color: whitesmoke;
             display: grid;
-            /* grid-template-areas: 
-            "lione1 lione1"
-            "lione2 lione3"            ; */
-            /* grid-template-columns: 30vw 30vw;
-            grid-template-rows: 60vw 10vw; */
             justify-content: center;
-            /* align-items: flex-end; */
-            /* margin: 0%;
-            padding: 0%; */
-            /* padding: 10vh 20vw; */
             width: 100vw;
             height: auto;
             padding: 10vh 0vh;
-            /* min-height: 100vh */
         }
 
         #lione h1 {
-            /* grid-area: lione2; */
-            /* display: block; */
             font-family: proxima nova condensed;
             font-weight: 900;
             font-size: 5vw;
             text-transform: uppercase;
-            /* margin: 0%;
-            padding: 0%; */
-            /* align-self: flex-end; */
-            /* align-self: flex-start; */
             background-color: deepskyblue;
         }
 
         #lione div {
             width: 60vw;
-            /* align-items: flex-end; */
-            /* display: flex; */
-            /* height: auto; */
-            /* overflow-y: hidden; */
             padding-top: 4vh;
         }
 
         #lionepic {
-            /* grid-area: lione1; */
-            /* display: block; */
             background: url(gifs/bosinhuis_2.gif);
             background-repeat: no-repeat;
             background-size: cover;
             background-position: 0vw -50vh;
-
             width: 60vw;
             height: 30vw;
-            /* max-height: 30vw; */
             align-items: unset;
 
         }
 
-        img{
-          object-fit: cover;
+        img {
+            object-fit: cover;
             width: 60vw;
-            height: 30vw;  
+            height: 30vw;
         }
 
         #lione p {
-            /* grid-area: lione3; */
-            /* display: block; */
             color: black;
-            /* background-color: white; */
             padding: 1vw;
             font-size: 1vw;
-            /* font-family: ff-good-web-pro-wide, proxima-nova, sans-serif;
-            font-weight: 300;
-            font-style: normal; */
-
-
         }
 
         #lionetog {
@@ -626,19 +590,11 @@
 
         #lione button {
             all: unset;
-            /* position:static; */
             padding: 2vh 2vw;
-            /* font-style: bold; */
             color: deepskyblue;
             box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
             background-color: black;
-            /* margin-bottom: 0px;
-            margin-right: 0px; */
         }
-
-        /* button{
-
-        } */
 
         #lione button:hover {
 
@@ -667,23 +623,26 @@
             <li>contact</li>
         </a>
     </nav>
+
     <div>
         <div id="mouse"></div>
     </div>
-    <div id="where"> </div>
+
+    <!-- <div id="where"> </div> -->
+
     <div id="name"><a href="#">
             <h1>Remco </h1>
             <h1> Pramudita </h1>
         </a></div>
-    <section id="landing">
 
+    <section id="landing">
         <p id="artblock"></p>
         <div id="artstat">Ik wil mijn <span class="spanText">kwaliteiten</span> als <span
                 class="spanText">ontwerper</span> gebruiken
             om anderen te helpen met hun <span class="spanText">geestelijke gezondheid</span>.</div>
         <div id="picture"></div>
-
     </section>
+
     <section id="about">
         <div class="aboutSec" id="secOne">
 
@@ -729,12 +688,9 @@
                 <h1 id="visdes">Kun jij mij daarbij helpen of wil je meer over mij te weten komen?</h1>
             </div>
             <div id="buttons"><button>over mij</button><button>contact</button></div>
-
-
-
         </div>
-
     </section>
+
     <section id="content">
         <ul id="work">
             <a href="#lione">
@@ -757,12 +713,15 @@
             </a>
         </ul>
     </section>
-    <section id="contact" style="height: 70vh; display: flex; justify-content: center; align-items: center; ">
+
+    <section id="contact" style="height: 100vh; display: flex; justify-content: center; align-items: center; ">
         contactinformatie <br>
         contactformulier <br>
         linked in</section>
+
     <section id="lione">
-        <div id="lionepic"><a href="https://lennart.xyz/bosinhuis/" target="_blank"><button>probeer het uit</button></a></div>
+        <div id="lionepic"><a href="https://lennart.xyz/bosinhuis/" target="_blank"><button>probeer het uit</button></a>
+        </div>
         <div class="postheader">
             <div id="lionetog">
                 <h1>Het Bos in Huis</h1>
@@ -776,41 +735,21 @@
                     kan toepassen om anderen te helpen met hun geestelijke gezondheid. Ik wil mijzelf blijven uitdagen
                     als
                     programmeur, maar ook ervaring opdoen in het maken van goede visuele ontwerpen.</p>
-
-                <!-- <div></div> -->
                 <div><img src="images/4883881.png" alt=""></div>
                 <div><img src="images/candytuft.png" alt=""></div>
-                <!-- <div></div> -->
                 <div><img src="images/begonia.png" alt=""></div>
-                <!-- <div></div> -->
             </div>
         </div>
-        <div><a href="https://lennart.xyz/bosinhuis/" target="_blank"><button>try it out</button></a> <a href="#work"><button>see more work</button></a></div>
-        <!-- <div><p>dddddd</p></div> -->
+        <div><a href="https://lennart.xyz/bosinhuis/" target="_blank"><button>try it out</button></a> <a
+                href="#work"><button>see more work</button></a></div>
     </section>
 
 
 
     <script refer>
         window.onscroll = window.onload = window.onmousemove = function () {
-
             checkTop();
-            // handleMouseMove(event);
-
         }
-        // picfunc();
-        // function picfunc() {
-        //     let picarray = document.getElementsByClassName("pic");
-        //     // picarray.forEach(element => {
-        //     //     element.onmouseover = function () {
-        //     //         document.getElementById("mouse").style.width = "200px";
-
-        //     //     }
-        //     // });
-        //     picarray.onmouseover = function (){
-
-        //     }
-        // }
 
         function checkTop() {
 
@@ -860,10 +799,6 @@
             ref.style.left = x - scrollLeft + 'px';
             ref.style.top = y - scrollTop + 'px';
 
-
-            // // block in landing
-            // var x = event.clientX;
-            // var y = event.clientY;
             document.getElementById("artblock").style.marginLeft = 3 - x / 500 + "vw";
             document.getElementById("artblock").style.marginTop = 5 - y / 100 + "vh";
         };
